--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <h1> <a class="ads" href="reality.html">Reality</a> </h1>
         <br>
         
-     <span><a href="https://www.linkedin.com/in/nayan-chouhan-b43437263"><img src="../MySite/images/linked in.png" alt="linked in profile" class="contact"></a></span>
+     <span><a href="https://www.linkedin.com/in/nayan-chouhan-b43437263"><img src="linked in.png" alt="linked in profile" class="contact"></a></span>
      <span><a href="https://github.com/NayanChouhan808"><img src="https://w7.pngwing.com/pngs/914/758/png-transparent-github-social-media-computer-icons-logo-android-github-logo-computer-wallpaper-banner-thumbnail.png" alt="linked in profile" class="contact"></a></span>
 
 </body>
